doing some quick fixes on the popup and the manifest

--- a/manifest.json
+++ b/manifest.json
@@ -4,16 +4,16 @@
   "version": "0.1",
   "manifest_version": 3,
   "action": {
-    "default_popup": "hello.html",
-    "default_icon": "hello_extensions.png"
+    "default_popup": "popup/index.html",
+    "default_icon": "asset/icon.png"
   },
   "background": {
     "service_worker": "service-worker.js",
     "type": "module"
   },
   "content_scripts": {
-    "matches" : ["https://*.youtube.com/*"],
-    "js": ["content-script-youtube.js"]
+    "matches" : ["https://*.youtube.com/*", "https://youtube.com/*"],
+    "js": ["script/content-script-youtube.js"]
   }
 }
 
