--- a/package.json
+++ b/package.json
@@ -1,5 +1,11 @@
 {
   "dependencies": {
-    "@discord/embedded-app-sdk": "^1.9.0"
+    "@discord/embedded-app-sdk": "^1.9.0",
+    "rollup": "^4.30.1"
+  },
+  "devDependencies": {
+    "@rollup/plugin-node-resolve": "^16.0.0",
+    "webpack": "^5.97.1",
+    "webpack-cli": "^6.0.1"
   }
 }
