--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "@discord/embedded-app-sdk": "^1.9.0",
+    "express": "^4.21.2",
     "rollup": "^4.30.1"
   },
   "devDependencies": {
